@@ -40,7 +40,7 @@ public class ScriptPermissionService extends BaseScopableProcessorExtension {
                 nodeRef,
                 authority,
                 permission,
-                new Boolean(allow)
+                Boolean.valueOf(allow)
         );
         return "";
     }
@@ -102,7 +102,7 @@ public class ScriptPermissionService extends BaseScopableProcessorExtension {
         NodeRef nodeRef = new NodeRef(nodeRefId);
         this.services.getPermissionService().setInheritParentPermissions(
                 nodeRef,
-                new Boolean(inheritParentPermissions)
+                Boolean.valueOf(inheritParentPermissions)
         );
         return "";
     }
